Revision history for Perl extension Imager::Graph.

Imager-Graph 0.06 - unreleased
=================

 - Removed ancient Imager cruft from the documentation

 - round the dimensions used within the legend to integers to prevent
   later truncation from causing uneven output.

Imager-Graph 0.05 - 17 December 2007
=================

This release is an attempt to work around the inconsistent text output
issues.

 - created Imager::Font::Test which simply outputs boxes instead of
   text to produce consistent graph images for comparison.


Imager-Graph 0.04 - 11 December 2007
=================

This is a clean up release, removing code required for ancient
releases of Imager, and otherwise modernizing the code.

 - skip all tests if we can't load the font

 - Save test results to ppm, so we can generate images even if we don't
   have PNG support in Imager.

 - instead of the old draw-no-aa-then-blur-the-result hack, we now use
   arc()'s aa option

 - tests now use Test::More

 - remove the old circle fudge hack, since Imager fixed arc fills a
   while ago

 - strictify Makefile.PL, include the LICENSE, use the correct version
   check for including the extra WriteMakefile keys

 - various changes for Kwalitee

 - remove fancy_fills check, we now depend on an Imager release that
   supports fountain fills.

Imager-Graph 0.02  Sat Oct  6 20:36:31 2001
=================

 - replace ImUgly.ttf with a new version where % renders on my older PC
 - remove some old test code that printed the Imager version
 - moved into local CVS to simplify cross-platform tests
      
Imager-Graph 0.01  Tue Sep 12 23:03:25 2001
=================

 - original version; created by h2xs 1.19
 - can draw some nice pie graphs