@@ -23,7 +23,7 @@ my $font = Imager::Font::Test->new();
 my @data = ( 100, 180, 80, 20, 2, 1, 0.5 );
 my @labels = qw(alpha beta gamma delta epsilon phi gi);
 
-plan tests => 11;
+plan tests => 13;
 
 my $pie = Imager::Graph::Pie->new;
 ok($pie, "creating pie chart object");
@@ -97,6 +97,24 @@ my ($im_version) = $Imager::VERSION =~ /(\d\.[\d_]+)/;
   $img5->write(file=>'testout/t10_mono.ppm')
     or die "Cannot save pie3: ",$img5->errstr,"\n";
   cmpimg($img5, "testimg/t10_mono.png", 550_000);
+
+  my $img6 = $pie->draw(data=>\@data, labels=>\@labels,
+                        font=>$font, style=>'fount_lin', 
+                        features=>[ 'allcallouts', 'labelspc', 'legend' ],
+                        legend=>
+			{
+			 valign=>'top', 
+			 halign=>'center',
+			 orientation => 'horizontal',
+			 fill => { solid => Imager::Color->new(0, 0, 0, 32) },
+			 patchborder => undef,
+			 #size => 30,
+			});
+  ok($img6, "sixth chart")
+    or print "# ",$pie->error,"\n";
+  $img6->write(file=>'testout/t10_hlegend.ppm')
+    or die "Cannot save pie6: ",$img5->errstr,"\n";
+  cmpimg($img6, "testimg/t10_hlegend.png", 550_000);
 }
 
 sub cmpimg {
