@@ -8,6 +8,8 @@ Imager-Graph 0.06 - unreleased
  - round the dimensions used within the legend to integers to prevent
    later truncation from causing uneven output.
 
+ - add horizontal legend boxes
+
 Imager-Graph 0.05 - 17 December 2007
 =================
 
